[tool.poetry]
name = "renparser"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["GimmiRuski <gimmiruski+pypi@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/GimmiRuski/renparser"
repository = "https://github.com/GimmiRuski/renparser"

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
