[tool.poetry]
name = "renparser"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["GimmiRuski <gimmiruski+pypi@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/GimmiRuski/renparser"
repository = "https://github.com/GimmiRuski/renparser"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
lark = "^0.11.1"
rich = "^9.6.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
pylint = "^2.6.0"
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
